# cigrid-llvm

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
build copy/: CMakeCache.txt  build.ninja  compile_commands.json
build copy/src/: cigrid
include/: common.hpp  flags.hpp
include/diagnostics/: diagnostics.hpp
include/lexer/: lexer.hpp  token.hpp
include/parser/: ast.hpp  parser.hpp
include/printer/: ast_printer.hpp
scripts/: build.sh  format.sh  test.sh
src/: CMakeLists.txt  ast_printer.cpp  diagnostics.cpp  lexer.cpp  main.cpp  parser.cpp
src/diagnostics/: diagnostics.cpp
src/lexer/: lexer.cpp
tests/: test.cpp
